syntax = "proto3";

package hvx.api.v1alpha1.channel.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/channel";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

// Broadcast Unlike activitypub article /status, Broadcast will store data based on ipfs, 
// although it also uses activitypub note type data, but
// When publishing a broadcast, it will sync the published content from the activity server 
// to the ipfs and then publish the returned CID to the channel subscribers.
service Broadcast {
  rpc CreateBroadcast (CreateBroadcastRequest) returns (CreateBroadcastResponse) {
    option (google.api.http) = {
      post: "/api/v1/channel/broadcast",
      body: "*"
    };
  }

  rpc GetBroadcasts (GetBroadcastsRequest) returns (GetBroadcastsResponse) {
    option (google.api.http) = {
      get: "/api/v1/channel/broadcast/{channelId}",
    };
  }

  rpc DeleteBroadcast (DeleteBroadcastRequest) returns (DeleteBroadcastResponse) {
    option (google.api.http) = {
      delete: "/api/v1/channel/broadcast",
      body: "*"
    };
  }
}

message BroadcastData {
  int64  id = 1;
  int64  channelId = 2;
  int64  adminId = 3;
  string cid = 4;
}

message CreateBroadcastRequest {
  int64 channelId = 1;
  string type = 2;
  string cid = 3;
}

message CreateBroadcastResponse {
  string code = 1;
  string status = 2;
}

message GetBroadcastsRequest {
  string channelId = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetBroadcastsResponse {
  string code = 1;
  repeated BroadcastData broadcasts = 2;
}

message DeleteBroadcastRequest {
  int64 channelId = 1;
  int64 broadcastId = 2;
}

message DeleteBroadcastResponse {
  string code = 1;
  string status = 2;
}

